@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/18/2017
+  * added subDeleter
+
 * 4/14/2017
   * added noExecStrCnv
 
